Fix layout on smaller screens

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -22,6 +22,7 @@ body {
 /* Playarea arrangement via FLEXBOX */
 #layout-parent {
 	height: 100%;
+	min-height: 800px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -29,10 +30,10 @@ body {
 }
 
 #playarea {
-	width: 80em;
+	width: 1280px;
 	/*max-width: 90%;*/
-	height: 50em;
-	max-height: 90%;
+	height: 800px;
+	/*max-height: 90%;*/
 	background-color: #00000090;
 	border-radius: 8px;
 }
